--- a/index.html
+++ b/index.html
@@ -105,11 +105,12 @@
 			<div class= "row">
 			<div class="col-md-12">
 				<ul class="mc_wrap">
-					<li class="mc_item_wrap">
+					<li class="mc_item_wrap active">
 						<div class="mc_item">
 							<a href="#">
 								<span></span>
 								<h4>Кузовной ремонт</h4>
+								<div class="mc_toggle"></div>
 							</a>
 						</div>
 					</li>
@@ -117,7 +118,17 @@
 						<li class="mc_item">
 							<a href="#">
 								<span></span>
-								<h4>Кузовной ремонт</h4>
+								<h4>Механические работы</h4>
+							</a>
+							<div class="mc_toggle"></div>
+						</div>
+						</div>
+					</li>
+					<div class="mc_item_wrap">
+						<li class="mc_item">
+							<a href="#">
+								<span></span>
+								<h4>Экспресс-услуги</h4>
 							</a>
 						</div>
 					</li>
@@ -125,7 +136,7 @@
 						<li class="mc_item">
 							<a href="#">
 								<span></span>
-								<h4>Кузовной ремонт</h4>
+								<h4>Диагностика</h4>
 							</a>
 						</div>
 					</li>
@@ -133,7 +144,7 @@
 						<li class="mc_item">
 							<a href="#">
 								<span></span>
-								<h4>Кузовной ремонт</h4>
+								<h4>Слесарные работы</h4>
 							</a>
 						</div>
 					</li>
@@ -141,15 +152,7 @@
 						<li class="mc_item">
 							<a href="#">
 								<span></span>
-								<h4>Кузовной ремонт</h4>
-							</a>
-						</div>
-					</li>
-					<div class="mc_item_wrap">
-						<li class="mc_item">
-							<a href="#">
-								<span></span>
-								<h4>Кузовной ремонт</h4>
+								<h4>Ремонт пластика</h4>
 							</a>
 						</div>
 					</li>
