--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
 <!--[if gt IE 8]><!-->
 <html lang="ru">
 <!--<![endif]-->
+
 <head>
 	<meta charset="utf-8" />
 
@@ -32,6 +33,7 @@
 	<link rel="stylesheet" href="css/main.css" />
 	<link rel="stylesheet" href="css/media.css" />
 </head>
+
 <body>
 	<header>
 		<div class="top_line">
@@ -67,33 +69,33 @@
 		</div>
 		<div class="buttons_top">
 			<div class="container">
-			<div class="row">
-				<div class="col-md-1"></div>
-				<div class="col-md-11">
-					<a href="#" class="button st_button">Оценить стоимость <br>ремонта по фото</a>
-					<a href="#" class="button">Прайс</a>
+				<div class="row">
+					<div class="col-md-1"></div>
+					<div class="col-md-11">
+						<a href="#" class="button st_button">Оценить стоимость <br>ремонта по фото</a>
+						<a href="#" class="button">Прайс</a>
+					</div>
 				</div>
 			</div>
 		</div>
-		</div>
 	</header>
 	<nav class="top_mnu">
-	<div class="container">
-		<div class="row">
-			<ul>
-			<li class="active"><a href="#">Главная</a></li>
-			<li><a href="#">О нас</a></li>
-			<li><a href="#">Цены</a></li>
-			<li><a href="#">Наши работы</a></li>
-			<li><a href="#">Партнеры</a></li>
-			<li><a href="#">Контакты</a></li>
-		</ul>
-		<div class="waranty">
-			<div class="w_left"><span>1 год</span></div>
-			<div class="w_right">Гарантия <br>на все работы</div>
+		<div class="container">
+			<div class="row">
+				<ul>
+					<li class="active"><a href="#">Главная</a></li>
+					<li><a href="#">О нас</a></li>
+					<li><a href="#">Цены</a></li>
+					<li><a href="#">Наши работы</a></li>
+					<li><a href="#">Партнеры</a></li>
+					<li><a href="#">Контакты</a></li>
+				</ul>
+				<div class="waranty">
+					<div class="w_left"><span>1 год</span></div>
+					<div class="w_right">Гарантия <br>на все работы</div>
+				</div>
+			</div>
 		</div>
-		</div>
-	</div>
 	</nav>
 	<section class="main_cats s_black">
 		<div class="container">
@@ -102,60 +104,99 @@
 					<h2>Услуги мастерской <strong>Авто</strong><span>Холл</span></h2>
 				</div>
 			</div>
-			<div class= "row">
-			<div class="col-md-12">
-				<ul class="mc_wrap">
-					<li class="mc_item_wrap active">
-						<div class="mc_item">
-							<a href="#">
-								<span></span>
-								<h4>Кузовной ремонт</h4>
-								<div class="mc_toggle"></div>
-							</a>
-						</div>
-					</li>
-					<div class="mc_item_wrap">
-						<li class="mc_item">
-							<a href="#">
-								<span></span>
-								<h4>Механические работы</h4>
-							</a>
-							<div class="mc_toggle"></div>
-						</div>
-						</div>
-					</li>
-					<div class="mc_item_wrap">
-						<li class="mc_item">
-							<a href="#">
-								<span></span>
-								<h4>Экспресс-услуги</h4>
-							</a>
-						</div>
-					</li>
-					<div class="mc_item_wrap">
-						<li class="mc_item">
-							<a href="#">
-								<span></span>
-								<h4>Диагностика</h4>
-							</a>
-						</div>
-					</li>
-					<div class="mc_item_wrap">
-						<li class="mc_item">
-							<a href="#">
-								<span></span>
-								<h4>Слесарные работы</h4>
-							</a>
-						</div>
-					</li>
-					<div class="mc_item_wrap">
-						<li class="mc_item">
-							<a href="#">
-								<span></span>
-								<h4>Ремонт пластика</h4>
-							</a>
-						</div>
-					</li>
+			<div class="row">
+				<div class="col-md-12">
+					<ul class="mc_wrap">
+						<li class="mc_item_wrap active">
+							<div class="mc_item">
+								<a href="#">
+									<span></span>
+									<h4>Кузовной ремонт</h4>
+									<div class="mc_toggle"></div>
+								</a>
+							</div>
+							<ul>
+								<li>
+									<a href="#">Стапельные работы</a>
+								</li>
+								<li>
+								<a href="#">Жестяные работы</a>
+								</li>
+								<li>
+								<a href="#">Арматурные работы</a>
+								</li>
+								<li>
+								<a href="#">Покраска автомобиля</a>
+								</li>
+								<li>
+								<a href="#">Локальная покраска</a>
+								</li>
+								<li>
+								<a href="#">Покраска мотоцикла</a>
+								</li>
+								<li>
+								<a href="#">Абразивная  полировка</a>
+								</li>
+								<li>
+								<a href="#">Легкая полировка блеск</a>
+								</li>
+								<li>
+								<a href="#">Защитная полировка</a>
+								</li>
+								<li>
+								<a href="#">Антикоррозийная обработка кузова</a>
+								</li>
+								<li>
+								<a href="#">Удаление вмятин без покраски</a>
+								</li>
+							</ul>
+						</li>
+						<li class="mc_item_wrap">
+							<div class="mc_item">
+								<a href="#">
+									<span></span>
+									<h4>Механические работы</h4>
+									<div class="mc_toggle"></div>
+								</a>
+							</div>
+						</li>
+						<li class="mc_item_wrap">
+							<div class="mc_item">
+								<a href="#">
+									<span></span>
+									<h4>Экспресс-услуги</h4>
+									<div class="mc_toggle"></div>
+								</a>
+							</div>
+						</li>
+						<li class="mc_item_wrap">
+							<div class="mc_item">
+								<a href="#">
+									<span></span>
+									<h4>Диагностика</h4>
+									<div class="mc_toggle"></div>
+								</a>
+							</div>
+						</li>
+						<li class="mc_item_wrap">
+							<div class="mc_item">
+								<a href="#">
+									<span></span>
+									<h4>Слесарные работы</h4>
+									<div class="mc_toggle"></div>
+								</a>
+							</div>
+						</li>
+						<li class="mc_item_wrap">
+							<div class="mc_item">
+								<a href="#">
+									<span></span>
+									<h4>Ремонт пластика</h4>
+									<div class="mc_toggle"></div>
+								</a>
+							</div>
+						</li>
+						
 					</ul>
 				</div>
 			</div>
@@ -189,7 +230,10 @@
 	<script src="libs/equalheight/jquery.equalheight.js"></script>
 	<script src="libs/stellar/jquery.stellar.min.js"></script>
 	<script src="js/common.js"></script>
-	<!-- Yandex.Metrika counter --><!-- /Yandex.Metrika counter -->
-	<!-- Google Analytics counter --><!-- /Google Analytics counter -->
+	<!-- Yandex.Metrika counter -->
+	<!-- /Yandex.Metrika counter -->
+	<!-- Google Analytics counter -->
+	<!-- /Google Analytics counter -->
 </body>
+
 </html>
